# CSV-Anonymizer

./: .gitignore  README.md  pyproject.toml
examples/: customers_raw.csv
keys/: key-v1.example.json
profiles/: crm-basic-1.0.0.yaml
src/anonymizer/: audit.py  cli.py  crypto.py  gui.py  keymgmt.py  pipeline.py  profile.py
tests/: test_crypto.py  test_pipeline.py  test_profile.py
